# redirector-rs

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh  urls.toml
.cargo/: config.toml
db/migrations/: 0000-urls_table.sql
migrations/: 000_base.sql
src/: lib.rs  main.rs  redirect.rs  urls.rs
src/backend/: config_file.rs  database.rs
src/backend/cockroach/: tx.rs
static/: insert.css  insert.html  list.css  list.js
templates/: insert.html  list.html  submitted.html
