[package]
name = "url"
version = "0.0.1"
edition = "2021"

[dependencies]
toml = {version = "=0.5.9", optional = true}
lazy_static = {version = "=1.4.0", optional = true}
postgres-openssl = {version = "=0.5.0", optional = true}
openssl = {version = "=0.10.41", optional = true}

[features]
#default = ["config_file"]
default = ["database"]
config_file = ["toml", "lazy_static"]
database = ["postgres-openssl", "openssl"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = []