[package]
name = "url"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "url"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "=1.4.0", optional = true }
toml = { version = "=0.5.9", optional = true }
askama = "0.11.1"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = []

[dependencies.rocket-include-static-resources]
version = "0.10.2"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres", "sqlx_macros"]
optional = true

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["postgres_pool"]
optional = true

[features]
#default = ["config_file"]
default = ["database"]
config_file = ["toml", "lazy_static"]
database = ["sqlx", "rocket_db_pools", "rocket_sync_db_pools"]

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = ["macros", "offline", "migrate", "postgres", "runtime-tokio-rustls"]
optional = true
